Adicionou documentação swagger para google oauth2
